# Financial-MCP-Agent

./: .env.example  .gitignore  README.md  logging_system.md  pyproject.toml  test_agent_with_real_tools.py
src/: main.py
src/agents/: fundamental_agent.py  summary_agent.py  technical_agent.py  value_agent.py
src/tools/: mcp_client.py  mcp_config.py
tests/: test_mcp_client.py  test_state_definition.py
tests/agents/: test_fundamental_agent.py  test_summary_agent.py  test_technical_agent.py  test_value_agent.py
